HFP-1391 IE11 fix for misaligned question/result

--- a/styles/single-choice-set.css
+++ b/styles/single-choice-set.css
@@ -7,6 +7,7 @@
 }
 .h5p-sc-set-wrapper.initialized {
   overflow: hidden;
+  -ms-scroll-limit: 0 0 0 0; /* IE11 bugfix for where this element can be out of line, when focusing on elements. */
   height: 100%;
 }
 .h5p-sc-set {
